<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/book_border">

    <TextView
        android:id="@+id/livro_titulo"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_tittle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/livro_autor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/livro_tipo"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_book_type"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/livro_lido"
        app:layout_constraintTop_toBottomOf="@+id/livro_ultima_pagina" />

    <TextView
        android:id="@+id/livro_autor"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_book_author"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/livro_titulo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/livro_numero_de_paginas"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_number_of_pages"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/livro_ultima_pagina"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/livro_titulo" />

    <TextView
        android:id="@+id/livro_ultima_pagina"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_last_page_read"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/livro_numero_de_paginas"
        app:layout_constraintTop_toBottomOf="@+id/livro_autor" />

    <TextView
        android:id="@+id/livro_lido"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:background="@drawable/attribute_borders"
        android:text="@string/text_is_read"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/livro_tipo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/livro_numero_de_paginas" />

</androidx.constraintlayout.widget.ConstraintLayout>