<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListBooks"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="24dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_autor_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_author"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_tipo_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_titulo_add"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_titulo_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_tittle"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/edt_autor_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_tipo_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_book_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edt_paginas_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_autor_add"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_paginas_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_number_of_pages"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_tipo_add"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/save_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_paginas_add" />

    <TextView
        android:id="@+id/cadastro_livro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_insert_book"
        app:layout_constraintBottom_toTopOf="@+id/edt_titulo_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />


</androidx.constraintlayout.widget.ConstraintLayout>